# msgpack-autosplit

./: .gitignore  COPYING  ChangeLog  Makefile.am  README.markdown  README.md  autogen.sh  configure.ac
man/: Makefile.am  msgpack-autosplit.8  msgpack-autosplit.8.markdown
po/: ChangeLog  Makevars  POTFILES  POTFILES.in
src/: Makefile.am  app.c  gettext.h  log.c  log.h  msgpack-autosplit.h  options.c  options.h
test/: Gemfile  Makefile.in  dist-dirs  dist-files
test/features/: gibberish.feature  help.feature  multiple_files.feature  multiple_files_gzip.feature  one_file.feature  one_file_gzip.feature
test/features/step_definitions/: files_number.rb  msgpack.rb
test/features/support/: env.rb
